@startuml
title 点单程序网 — 领域模型类图

skinparam {
  shadowing false
  roundcorner 8
  defaultFontName "PingFang SC"
  defaultFontSize 11
  
  ' 简约配色
  ClassBorderColor #34495E
  ClassBackgroundColor #FFFFFF
  ClassBorderThickness 1.5
  ArrowColor #7F8C8D
  ArrowThickness 1.2
}

' ═══════════════════════════════════════════
'              用户管理域
' ═══════════════════════════════════════════

package "用户管理" <<Rectangle>> {
  class User {
    +userId: String
    +username: String
    __
    +login()
    +logout()
  }
  
  class Admin
}

User <|-- Admin

' ═══════════════════════════════════════════
'              菜品管理域
' ═══════════════════════════════════════════

package "菜品管理" <<Rectangle>> {
  enum DishStatus {
    OnShelf
    OffShelf
  }
  
  class Category {
    +categoryId: String
    +name: String
    +sortOrder: int
    __
    +getDishes()
  }
  
  class Dish {
    +dishId: String
    +name: String
    +price: Decimal
    +imageUrl: String
    +stock: int
    +status: DishStatus
    __
    +updateStock(delta)
    +isAvailable(): bool
  }
  
  class OptionGroup {
    +groupId: String
    +name: String
    +type: String
    +required: bool
    +maxSelect: int
  }
  
  class OptionItem {
    +itemId: String
    +name: String
    +priceDelta: Decimal
    +available: bool
  }
  
  Category "1" o-- "*" Dish : 包含
  OptionGroup "1" *-- "*" OptionItem
  Dish "*" ..> "*" OptionGroup : 配置
}

' ═══════════════════════════════════════════
'              订单管理域
' ═══════════════════════════════════════════

package "订单管理" <<Rectangle>> {
  enum OrderStatus {
    Created
    Submitted
    Cancelled
    Completed
  }
  
  class Order {
    +orderId: String
    +status: OrderStatus
    +remark: String
    +createdAt: DateTime
    __
    +totalPrice(): Decimal
    +submit()
    +cancel()
  }
  
  class OrderItem {
    +qty: int
    +unitPrice: Decimal
    __
    +subtotal(): Decimal
  }
  
  Order "1" *-- "1..*" OrderItem : 包含
  OrderItem "*" --> "1" Dish : 引用
  OrderItem "*" ..> "0..*" OptionItem : 选择
}

' ═══════════════════════════════════════════
'              跨域关系
' ═══════════════════════════════════════════

User "1" -- "0..*" Order : 创建

' ═══════════════════════════════════════════
'              设计说明
' ═══════════════════════════════════════════

note top of User
  <b>用户模型</b>
  简化设计，仅区分
  普通用户与管理员
end note

note bottom of Dish
  <b>库存管理</b>
  stock 字段实时反映库存
  status 控制上下架状态
end note

note right of Order
  <b>订单流程</b>
  Created → Submitted
  → Completed/Cancelled
  
  <b>重要：</b>系统不涉及支付
  订单生成后线下付款
end note

note bottom of OptionGroup
  <b>口味配置</b>
  支持单选/多选
  可设置必选项
end note

@enduml
